# Requirements Update (requirements will need to be reinstalled)

# New Features
Added new collection_order `custom.desc` ([FR](https://features.metamanager.wiki/features/p/reverse-sort-collectionorder-custom))
Added webp Image Support ([FR](https://features.metamanager.wiki/features/p/support-webp-image-extensions))

# Bug Fixes
Fixed Italian Translation